Fix project list overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,6 +39,7 @@
     --yellow: #D09C3B;
 
     --drop-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    --body-padding: 2rem;
 }
 
 * {
@@ -48,7 +49,7 @@
 body {
     width: 100%;
     height: 100vh;
-    padding: 2rem 2rem 0;
+    padding: var(--body-padding) var(--body-padding) 0;
     background: var(--background-color);
     background: var(--background-gradient);
 }
@@ -87,7 +88,7 @@ button:hover {
     height: 100%;
     display: grid;
     grid-template-columns: clamp(200px, 20%, 275px) 1fr clamp(200px, 20%, 275px);
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto minmax(0, 1fr);
     row-gap: 2rem;
     column-gap: 10%;
 }
@@ -103,21 +104,21 @@ button:hover {
 .left-container {
     display: flex;
     flex-direction: column;
-    padding-bottom: 2rem;
+    padding-bottom: var(--body-padding);
 }
 
 .side-nav {
-    flex: 1;
     display: flex;
     flex-direction: column;
+    height: 100%;
     width: 100%;
     background-color: var(--card-color-default);
     border: 1px solid var(--stroke-color-default);
     border-radius: 10px;
     box-shadow: var(--drop-shadow);
-    padding: 1rem;
-    padding-top: 1.5rem;
+    padding: 1.5rem;
     gap: 0.2rem;
+    overflow: hidden;
 }
 
 .nav-btn, .nav-form {
@@ -169,6 +170,17 @@ button:hover {
 
 .project-section {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+#project-list {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
 
 .project-section-heading {
@@ -177,8 +189,9 @@ button:hover {
     margin-top: 1.5rem;
     font-size: 0.9rem;
     font-weight: 600;
-    padding: 0 0 0 0.4rem;
+    padding: 0 0 0.4rem 0.4rem;
     color: var(--text-color);
+    border-bottom: 1px solid var(--stroke-color-default);
 }
 
 #add-project {
@@ -246,7 +259,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-bottom: 2rem;
+    padding-bottom: var(--body-padding);
 }
 
 .quick-tasks-container {
